<resources>
    <string name="app_name">Repository Search</string>
    <string name="search">Search here</string>
    <string name="bt_search">Search</string>
    <string name="name">Name:</string>
    <string name="full_name">Full Name:</string>
    <string name="watcher_count">Watcher Count:</string>
    <string name="commit_count">Commit Count:</string>
    <string name="project_link">Project Link:</string>
    <string name="description">Description:</string>
    <string name="contributors">Contributors:</string>
    <string name="repo_details">Repo Details</string>
    <string name="contributor_title">Contributor</string>
    <string name="somethin_wrong">Something went wrong, Please try again</string>
    <string name="found">Found </string>
    <string name="repo">Repositories by </string>
</resources>
